--- a/provisioning/roles/golang/defaults/main.yml
+++ b/provisioning/roles/golang/defaults/main.yml
@@ -1,3 +1,5 @@
 ---
 go:
-  version: 1.5.2
+  version: 1.5.3
+  checksum: sha256:43afe0c5017e502630b1aea4d44b8a7f059bf60d7f29dfd58db454d4e4e0ae53
+  path_prefix: /usr/local
