Update packages in pre task

--- a/provisioning/playbook.yml
+++ b/provisioning/playbook.yml
@@ -1,12 +1,15 @@
 ---
 - hosts: all
   become: yes
+  pre_tasks:
+    - name: update apt cache
+      apt: update_cache=yes cache_valid_time=86400
   roles:
     - ntp
     - golang
   tasks:
     - name: install packages
-      apt: pkg={{ item }} state=latest update_cache=yes cache_valid_time=3600
+      apt: pkg={{ item }} state=latest
       with_items:
         - git
         - make
