--- a/provisioning/roles/golang/defaults/main.yml
+++ b/provisioning/roles/golang/defaults/main.yml
@@ -1,5 +1,8 @@
 ---
 go:
-  version: 1.5.3
-  checksum: sha256:43afe0c5017e502630b1aea4d44b8a7f059bf60d7f29dfd58db454d4e4e0ae53
+  version: 1.6.2
+  arch: amd64
+  platform: linux
+  checksum: sha256:e40c36ae71756198478624ed1bb4ce17597b3c19d243f3f0899bb5740d56212a
   path_prefix: /usr/local
+  tarball_keep_days: 90
