build: Fix multi-OS config

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,9 +8,12 @@ on:
 
 jobs:
   build:
-    runs-on:
-      - macos-latest
-      - ubuntu-latest
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os:
+          - macos-latest
+          - ubuntu-latest
     steps:
     - uses: actions/checkout@v2
     - name: install go
